# context-menu-helper

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  release.bat
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs  log_store.rs  mock_registry.rs  models.rs  registry.rs  service.rs  templates.rs  validation.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  main.js  styles.css
