[workspace]
members = ["core", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Context Menu Helper"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
