[package]
name = "context_menu_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
