[package]
name = "context_menu_helper_desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
context_menu_core = { path = "../core" }
rfd = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
